Fix modify server member role popup overflow

--- a/src/components/member-context-menu/styles.module.scss
+++ b/src/components/member-context-menu/styles.module.scss
@@ -1,6 +1,8 @@
-
-
 .roleModal {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
   width: 100%;
 }
 .roleModalContainer {
@@ -10,6 +12,7 @@
   overflow: auto;
   padding-right: 5px;
   width: 100%;
+  height: 100%;
   .roleItem {
     overflow: hidden;
     display: flex;
